--- a/static/css/mobilemenu.css
+++ b/static/css/mobilemenu.css
@@ -117,6 +117,28 @@ border: 1px solid #D3A230;
 
   color: #FEFEF8;
 }
+.mobilemenuheaderen{
+  position: absolute;
+  width: 200px;
+  display: block;
+  height: 56px;
+  left: 0;
+  right: 0; 
+  margin-top: 11px;
+  margin-left: 21px;
+  margin-right: auto; 
+  top: 20px;
+
+  font-family: 'BarlowCondensedBold';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 35px;
+
+  /* or 74% */
+
+  color: #FEFEF8;
+}
 
 .mobilemenuitem{
   width: 204px;
@@ -125,6 +147,23 @@ left: 85.5px;
 top: 244.17px;
 
 font-family: 'LGVAnastasia';
+font-style: normal;
+font-weight: 400;
+font-size: 38px;
+line-height: 27px;
+
+/* or 71% */
+text-align: center;
+
+color: #3E3A2B;
+}
+.mobilemenuitemen{
+  width: 204px;
+height: 32px;
+left: 85.5px;
+top: 244.17px;
+
+font-family: 'BarlowCondensedBold';
 font-style: normal;
 font-weight: 400;
 font-size: 38px;
