--- a/gori/templates/history_detail.html
+++ b/gori/templates/history_detail.html
@@ -32,6 +32,9 @@
 
 <div class="post_social_divs"><img src="{% static '/icons/vectortw.svg' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
 
+<span class="sharetext">{% t 'share' %}</span>
+
+
 <div class="post_line"></div>
 <div class="post_second_block">
 
