static files optimisation

--- a/gori/templates/architect.html
+++ b/gori/templates/architect.html
@@ -7,6 +7,9 @@
 	<meta property="og:type" content="architect" />
 	<meta property="og:url" content="{{ request.get_full_path }}" />
 	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
+	<link rel="stylesheet" href="{% static '/css/aboutproject.css' %}">
+
+	<link rel="stylesheet" href="{% static '/css/history.css' %}">
 </head>
 <style>
 	.menuitem4{
