--- a/gori/templates/history.html
+++ b/gori/templates/history.html
@@ -8,6 +8,9 @@
 	<meta property="og:type" content="history" />
 	<meta property="og:url" content="{{ request.get_full_path }}" />
 	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
+	<link rel="stylesheet" href="{% static '/css/aboutproject.css' %}">
+
+	<link rel="stylesheet" href="{% static '/css/history.css' %}">
 </head>
 
 <style>
