--- a/gori/templates/humans.html
+++ b/gori/templates/humans.html
@@ -9,6 +9,9 @@
 	<meta property="og:type" content="humans" />
 	<meta property="og:url" content="{{ request.get_full_path }}" />
 	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
+	<link rel="stylesheet" href="{% static '/css/humans.css' %}">
+	<link rel="stylesheet" href="{% static '/css/aboutproject.css' %}">
+
 </head>
 
 <style>
