--- a/gori/templates/index.html
+++ b/gori/templates/index.html
@@ -9,6 +9,11 @@
 	<meta property="og:url" content="{{ request.get_full_path }}" />
 	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
 	<meta property="og:description" content="{% t 'identity_map_text' %}" />
+        <link rel="stylesheet" href="{% static '/css/Iblock.css' %}">
+        <link rel="stylesheet" href="{% static '/css/IIblock.css' %}">
+        <link rel="stylesheet" href="{% static '/css/map.css' %}">
+        <link rel="stylesheet" href="{% static '/css/detail_post.css' %}">
+
 
 </head>
 
