--- a/gori/templates/search.html
+++ b/gori/templates/search.html
@@ -3,6 +3,12 @@
 {% block content %}
 {% load transl_extras %}
 
+	<link rel="stylesheet" href="{% static '/css/history.css' %}">
+        <link rel="stylesheet" href="{% static '/css/search.css' %}">
+	<link rel="stylesheet" href="{% static '/css/aboutproject.css' %}">
+
+
+
 <div class="historydekstop">
 <span class="search_result">{% t 'sresult' %}
 <span class="search_text">{{search_text}}</span>-სთვის</span>
