--- a/gori/templates/aboutproject.html
+++ b/gori/templates/aboutproject.html
@@ -11,6 +11,7 @@
 	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
 	<meta property="og:description" content="{{about_project.project_info|truncatechars:150}}" />
 
+	<link rel="stylesheet" href="{% static '/css/aboutproject.css' %}">
 </head>
 
 <style>
