--- a/gori/templates/humans_detail.html
+++ b/gori/templates/humans_detail.html
@@ -10,6 +10,11 @@
 	<meta property="og:url" content="{{ request.get_full_path }}" />
 	<meta property="og:image" content="{% static human.post_img %}" />
 	<meta property="og:description" content="{{human.post_text|truncatechars:150}}" />
+		<link rel="stylesheet" href="{% static '/css/humans.css' %}">
+			<link rel="stylesheet" href="{% static '/css/detail_post.css' %}">
+			<link rel="stylesheet" href="{% static '/css/IIblock.css' %}">
+
+
 </head>
 
 <style>
@@ -77,7 +82,7 @@
 <center>
 <div class="post_detail_mobile">
 <div class="post_first_block_mobile">
-	<a class="post_go_back_mobile" href="{% url 'humans' lang=lang %}">{% t 'back' %}</a>
+	<a class="post_go_back_mobile" href="{% url 'humans' lang=lang %}"><img src="{% static '/icons/Iconleft.svg' %}" style="position: relative; top:4px; margin-right: 11px">{% t 'back' %}</a>
 	<span class="post_title_mobile" style="height: auto; width:60%; float:left; margin-left:10px">{{human}}</span>
 	<img src="{% static human.post_img %}" class="post_img_mobile_human" >
 	</div><br><br><br><br><br><br>
