--- a/gori/templates/textus.html
+++ b/gori/templates/textus.html
@@ -8,6 +8,7 @@
 	<meta property="og:type" content="textus" />
 	<meta property="og:url" content="{{ request.get_full_path }}" />
 	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
+	<link rel="stylesheet" href="{% static '/css/textus.css' %}">
 </head>
 
 <style>
