--- a/gori/templates/textus.html
+++ b/gori/templates/textus.html
@@ -89,16 +89,16 @@
 	<span class="contact_us_contact_usen">{% t 'find_us' %}</span><br><br>
 	{% endif %}
 		<a href="https://www.facebook.com/IDFI.official">
-		<img class="socialicons" src="{% static '/icons/fb.png' %}"></a>
+		<img class="socialicons" src="{% static '/icons/fb.svg' %}"></a>
 		
 		<a href="https://twitter.com/IDFIGeorgia" style="margin-left:16px">
-		<img class="socialicons" src="{% static '/icons/tw.png' %}"></a>
+		<img class="socialicons" src="{% static '/icons/tw.svg' %}"></a>
 
 		<a style="margin-left:16px" href="https://www.youtube.com/user/IDFIGeorgia">
-		<img class="socialicons" src="{% static '/icons/yt.png' %}"></a>
+		<img class="socialicons" src="{% static '/icons/yt.svg' %}"></a>
 
 		<a style="margin-left:16px" href="https://www.instagram.com/idfi.ge/">
-		<img class="socialicons" src="{% static '/icons/ig.png' %}"></a>
+		<img class="socialicons" src="{% static '/icons/ig.svg' %}"></a>
 </div>
 </div>
 
@@ -167,15 +167,15 @@
 <div class="mobilecontactusline"></div><br>
 <div style="width:300px">
 	<a href="https://www.facebook.com/IDFI.official" style="float: left;">
-			<img class="" src="{% static '/icons/fb.png' %}"></a>
+			<img class="" src="{% static '/icons/fb.svg' %}"></a>
 		
 		<a href="https://twitter.com/IDFIGeorgia" style="float: left; margin-left: 16px;">
-			<img class="" src="{% static '/icons/tw.png' %}"></a>
+			<img class="" src="{% static '/icons/tw.svg' %}"></a>
 		<a style="float: left;margin-left: 16px;" href="https://www.youtube.com/user/IDFIGeorgia">
-		<img class="" src="{% static '/icons/yt.png' %}"></a>
+		<img class="" src="{% static '/icons/yt.svg' %}"></a>
 
 		<a style="float: left;margin-left: 16px;" href="https://www.instagram.com/idfi.ge/">
-		<img class="" src="{% static '/icons/ig.png' %}"></a>
+		<img class="" src="{% static '/icons/ig.svg' %}"></a>
 
 </div>
 </div>
