--- a/gori/templates/videos.html
+++ b/gori/templates/videos.html
@@ -8,6 +8,7 @@
 	<meta property="og:type" content="videos" />
 	<meta property="og:url" content="{{ request.get_full_path }}" />
 	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
+	<link rel="stylesheet" href="{% static '/css/IIblock.css' %}">
 </head>
 
 <div class="videos_desktop">
