--- a/static/css/IIblock.css
+++ b/static/css/IIblock.css
@@ -177,7 +177,7 @@ color: #3E3A2B;
 	display: none;
 }
 .videosdiv{
-width: 1310px;
+width: 75%;
 height: 536.71px;
 display: inline-block;
 margin-top: 50px;
