changes in human

--- a/gori/templates/aboutproject.html
+++ b/gori/templates/aboutproject.html
@@ -28,7 +28,7 @@
 	{% if lang == 'ka' %}
 	<span class="about_project_header">{% t 'about_project' %}</span>
 	{% else %}
-	<span class="about_project_headeren">{% t 'about_project' %}</span>
+	<span class="about_project_headeren">{% t 'aboutmobile' %}</span>
 	{% endif %}
 	<div class="about_project_text_div">
 		<span class="about_project_text">{{about_project.project_info}}</span>
