--- a/gori/templates/humans.html
+++ b/gori/templates/humans.html
@@ -36,10 +36,15 @@
 	<div class="humans_post_desktop_iblock">
 		<span class="humans_post_desktop_header">{{human.post_title}}
 		</span>
-		<span class="humans_post_desktop_info">{{human.post_text|truncatechars:300}}<br><i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}
-		<img src="{% static '/icons/Iconrightarrow.svg' %}" style="margin-left: 5px; margin-top: 9px; position: absolute;"></i></span>
+		<span class="humans_post_desktop_info">{{human.post_text|truncatechars:300}}<br><span style="color:#3E3A2B; margin-top: 20px; display: block">{% t "see_all" %}
+		<img src="{% static '/icons/Iconrightarrow.svg' %}" style="margin-left: 10px; margin-top: 8px; position: absolute;"></span></span>
 	</div>
+	{% if human.post_cover_img != 'None' %}
+	<img src="{% static human.post_cover_img %}" class="humans_post_img_desktop">
+	{% else %}
 	<img src="{% static human.post_img %}" class="humans_post_img_desktop">
+	{% endif %}
+
 </div>
 </div>
 </a>
